--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,14 @@
+#foto-principal {
+  max-width: 300px;
+}
+
+.miniatura {
+  width: 100px;
+  border: 1px solid gray;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
